--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
     "description": "A connector for CM text (SMS) messages and Laravel.",
     "type": "library",
     "license": "MIT",
+    "version" : "1.1",
+    "homepage" : "http://www.chilion.nl",
     "authors": [
         {
             "name": "Chilion Snoek",
