--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "license": "MIT",
     "version" : "1.1",
-    "homepage" : "http://www.chilion.nl",
+    "homepage" : "http://chilion.nl/published-cmtextconnector-for-laravel-package/",
     "authors": [
         {
             "name": "Chilion Snoek",
